# QtSeralUart

./: .gitignore  CMakeLists.txt
SerialPortToolDemo/: ReadMe.md  SerialPortTool.pro  mainwindow.cpp  mainwindow.ui  utils.cpp  utils.h
